# BATorrent

./: .clang-tidy  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  PRIVACY.md  README.de.md  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.ru.md  README.ua.md  README.zh-CN.md  SECURITY.md  TRADEMARK.md  index.html  run-batorrent.bat  sitemap.xml
.github/: tsan-suppressions.txt
.github/workflows/: build.yml  clang-tidy.yml  codeql.yml  osv-scanner.yml  qml-smoke.yml  sanitizers.yml  scorecard.yml  store.yml  tsan.yml
.migration-plan/: 00-bridge-api.md  01-design-system.md  11-search.md  12-addon.md  13-createtorrent.md  14-rss.md  15-mainwindow-actions.md  20-logviewer.md  21-diagnostics.md  22-shortcuts.md  24-inspector.md
benchmark/: bench.cpp
blog/: feed.xml  index.html  style.css
blog/batorrent-4-2-polish/: index.html
cmake/: Info.plist.in
docs/: ARCHITECTURE.md  ARCHITECTURE.ua.md  CHANGELOG.ua.md  HUB_4.0_PLAN.md  QML_ARCHITECTURE.md
docs/qml-spec/: ASSETS.md  AboutDialog.checklist.md  AddAddonDialog.checklist.md  AddTorrentDialog.checklist.md  BatDialog.checklist.md  CreateTorrentDialog.checklist.md  DetailWindow.checklist.md  EmptyWindow.checklist.md  MAPPING.md  MISSING_ASSETS.md  MagnetDialog.checklist.md  Main.checklist.md  README.md  ReleaseNotesDialog.checklist.md  RemoveDialog.checklist.md  RssWindow.checklist.md  SearchWindow.checklist.md  SettingsWindow.checklist.md  Theme.qml  WelcomeDialog.checklist.md
donate/: index.html
github/: index.html
installer/: batorrent.iss
installer/msix/: AppxManifest.xml
linux/: index.html
mac/: index.html
portable/: index.html
pt/: index.html
ru/: index.html
scripts/: apply-fork-patches.sh  dev-build-fork-linux.sh  dev-build-fork.sh  dev-build.sh  dev-run.sh  qml-lint.sh
src/: main.cpp  resources.qrc
src/app/: addonmanager.cpp  addonmanager.h  archivescan.cpp  archivescan.h  defender.cpp  discordrpc.cpp  discoveryservice.cpp  discoveryservice.h  geoip.cpp  geoip.h  logger.cpp  logger.h  metadataresolver.cpp  metadataresolver.h  nameparser.cpp  nameparser.h  qrcodegen.cpp  releasepick.cpp  releasepick.h  rssmanager.cpp  rssmanager.h  statshistory.cpp  statshistory.h  subtitleparser.cpp  subtitleparser.h  subtitlesearch.cpp  subtitlesearch.h  suspiciousscan.cpp  suspiciousscan.h  translator.cpp  translator.h  updater.cpp  utils.h
src/bridges/: bridgecommon.h  discordrpcbridge.h  qmladdonbridge.h  qmli18nbridge.h  qmllogbridge.h  qmlnotificationbridge.h  qmlpairingbridge.h  qmlposterbridge.cpp  qmlposterbridge.h  qmlpostermodel.cpp  qmlpostermodel.h  qmlrssbridge.h  qmlsearchbridge.cpp  qmlsearchbridge.h  qmlsessionbridge.cpp  qmlsessionbridge.h  qmlsessionbridge_disk.cpp  qmlsessionbridge_games.cpp  qmlsessionbridge_library.cpp  qmlsessionbridge_playback.cpp  qmlsessionbridge_selection.cpp  qmlsettingsbridge.cpp  qmlsettingsbridge.h  qmlsubtitlebridge.h  qmlthemebridge.cpp  qmlthemebridge.h  qmlupdaterbridge.h
src/gui/: addtorrentdialog.cpp  addtorrentdialog.h  detailspanel.cpp  detailspanel.h  diagnosticsdialog.cpp  logviewerdialog.cpp  mainwindow.cpp  mainwindow.h  pairingdialog.cpp  posterview.cpp  posterview.h  qmlposterbridge.cpp  qmlposterbridge.h  qmlpostermodel.cpp  qmlsearchbridge.cpp  qmlsessionbridge.cpp  qmlsettingsbridge.cpp  qmlthemebridge.cpp  releasenotesdialog.cpp  searchdialog.cpp  settingsdialog.cpp  settingsdialog.h  shortcutsdialog.cpp  torrentmodel.cpp  torrentmodel.h
src/images/: appicon.icns
src/ipc/: enginehost.cpp  enginehost.h  ipcengine.cpp  ipcengine.h  ipcprotocol.h  ipcserialize.h
src/qml/: AboutDialog.qml  AddAddonDialog.qml  AddTorrentDialog.qml  BatDialog.qml  CommandPalette.qml  CreateTorrentDialog.qml  DetailPanel.qml  DiagnosticsWindow.qml  DiscoverView.qml  FilterBar.qml  FindBar.qml  FindBillboard.qml  FindBrowse.qml  GetWatchOverlay.qml  HubCard.qml  HubDetailDrawer.qml  HubView.qml  InputPromptDialog.qml  InspectorDialog.qml  LibraryView.qml  LogViewerWindow.qml  MagnetDialog.qml  Main.qml  MakeRoomPanel.qml  NavBar.qml  NavRail.qml  PairingDialog.qml  PlayerOptionsPanel.qml  PlayerSubPanel.qml  PlayerWindow.qml  ReleaseNotesDialog.qml  RemoveDialog.qml  RemovedHistoryWindow.qml  RssWindow.qml  SearchDetailDrawer.qml  SearchEmptyState.qml  SearchFiltersRow.qml  SearchGameMgr.qml  SearchLanding.qml  SearchListPane.qml  (+19 more)
src/qml/theme/: Theme.qml
src/qml/widgets/: BatMenu.qml  BatMenuItem.qml  BatMenuSep.qml  BtnFlat.qml  CatItem.qml  DetailFiles.qml  DetailGeneral.qml  DetailGraph.qml  DetailKVSection.qml  DetailPeers.qml  DetailPieces.qml  DetailSidebar.qml  DetailTabs.qml  DetailTrackers.qml  DiskMonitor.qml  DownloadCarousel.qml  EmptyState.qml  Eyebrow.qml  FavFolders.qml  (+19 more)
src/torrent/: bandwidthschedule.h  iengine.h  ipblocklist.cpp  ipblocklist.h  magnettrackers.h  memguard.h  proxycontroller.cpp  proxycontroller.h  sessionmanager.cpp  sessionmanager.h  sessionmanager_alerts.cpp  sessionmanager_categories.cpp  sessionmanager_config.cpp  sessionmanager_info.cpp  sessionmanager_network.cpp  sessionmanager_persistence.cpp  sessionmanager_pertorrent.cpp  sessionmanager_security.cpp  sessionmanager_streaming.cpp  types.h
src/webui/: index.html  streamserver.cpp  streamserver.h  webserver.cpp  webserver.h
store/: index.html
tests/: CMakeLists.txt  fuzz_nameparser.cpp  httptestserver.h  test_bandwidthschedule.cpp  test_bridge.cpp  test_debrid.cpp  test_episodegroup.cpp  test_filehostresolver.cpp  test_gamesource.cpp  test_geoipdb.cpp  test_httpdownload.cpp  test_httpdownloadmanager.cpp  test_ipblocklist.cpp  test_ipcprotocol.cpp  test_magnettrackers.cpp  test_memguard.cpp  test_memory.cpp  test_mkvchapters.cpp  test_nameparser.cpp  test_proxycontroller.cpp  test_rangeplan.cpp  test_searchranker.cpp  test_security.cpp  test_unit.cpp
tests/qml/: main.cpp  tst_TFld.qml
tests/webui/: test_webui.mjs
torrent/: index.html
translations/: de.json  en.json  es.json  ja.json  pt.json  ru.json  tr.json  uk.json  zh.json
win/: index.html
(+75 files in other folders)
